bunch of changes

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   <app-root></app-root>
 
   <div class="app-loader">
-    <img class="logo" src="https://raw.githubusercontent.com/hdjirdeh/angular2-hackernews/master/public/assets/images/angular2-hn.png">
+    <img class="logo pulse" src="https://raw.githubusercontent.com/hdjirdeh/angular2-hackernews/master/public/assets/images/angular2-hn.png">
   </div>
 
   {{#if environment.production}}
